fixed namebox causing the endgame screen to jump

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@
   width: 60px;
   height: 20px;
   z-index: 5;
-  position: relative;
+  position: absolute;
   background-color: #000000;
   top: 345px;
   left: 550px;
